(lang dune 3.17)

(name AOC2025-Summer)

(generate_opam_files true)

(source
 (github nukeLEARg/AOC2025-Summer))

(authors "Nuke <nukelearyt@gmail.com>")

(maintainers "Nuke <nukelearyt@gmail.com>")

(license LICENSE)

(package
 (name AOC2025-Summer)
 (synopsis "Summer Friends AOC 2019")
 (description "Summer Friends AOC 2019")
 (depends ocaml dune)
 (tags ("advent of code")))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
